remove email icon fill color

--- a/src/templates/partials/icons.twig
+++ b/src/templates/partials/icons.twig
@@ -29,7 +29,7 @@
 		</symbol>
 	
 		<symbol id="icon-email" viewBox="0 0 32 32">
-			<title>icon-mail</title><g fill="#202020" fill-rule="evenodd"><path d="M1.28 5L16 15.353 30.72 5z"></path><path d="M0 6.294v18.118C0 25.835 1.152 27 2.56 27h26.88c1.408 0 2.56-1.165 2.56-2.588V6.294L16 20.53 0 6.294z"></path></g>
+			<title>icon-mail</title><path d="M1.28 5L16 15.353 30.72 5z"></path><path d="M0 6.294v18.118C0 25.835 1.152 27 2.56 27h26.88c1.408 0 2.56-1.165 2.56-2.588V6.294L16 20.53 0 6.294z"></path>
 		</symbol>
 	
 		<symbol id="icon-facebook" viewBox="0 0 32 32">
