revise pagination and make responsive. Fixes #112

--- a/src/scss/components/_pagination.scss
+++ b/src/scss/components/_pagination.scss
@@ -1,37 +1,52 @@
 .pagination {
   margin-bottom: $component-margin-bottom;
   margin-top: $component-margin-bottom;
+  text-align: center;
 }
 
 .pagination__list {
-  display: flex;
+  display: inline-block;
+
+  @include media(sm) {
+    width: 100%;
+    display: flex;
+  }
 }
 
 .pagination__item {
+  display: none;
+
   &:not(:last-of-type) {
-    margin-right: 29px; // why 29?
+    margin-right: 1rem;
   }
 
-  // display: none;
-
-  &:first-of-type,
-  &:last-of-type {
-    // display: block;
+  @include media(md) {
+    display: block;
   }
 }
 
+.pagination__item--next,
+.pagination__item--previous,
+.pagination__item--active {
+  display: inline-block;
+}
+
+.pagination__item--first,
+.pagination__item--last,
 .pagination__item--others {
-  display: block;
+  @include media(sm) {
+    display: inline-block;
+  }
 }
 
 .pagination__link {
   display: block;
   font-weight: $font-weight-semibold;
   font-size: 14px;
-  width: 30px;
-  height: 30px;
-  line-height: 30px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
   text-align: center;
+  padding: 0.25rem 0.5rem;
 
   &:hover,
   &:focus {
@@ -42,5 +57,17 @@
   &.pagination__link--active {
     background-color: $brand-primary;
     color: $white;
+  }
+
+  .pagination__item--next &,
+  .pagination__item--previous & {
+    padding-left: 0;
+    padding-right: 0;
+    @include link-border();
+
+    &:focus,
+    &:hover {
+      background: transparent;
+    }
   }
 }
