add alert component. closes #63

--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -75,7 +75,9 @@ $black: #202020;
 $gray: #767676;
 $gray-light: #dedede;
 
-$danger: #e60000;
+$danger: #dc3545;
+$info: $lighter-blue;
+$warning: #ffc107;
 
 $text-colors: (
   'primary': $brand-primary,
