--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -23,6 +23,7 @@
 
 // components
 @import 'components/accordion';
+@import 'components/alert';
 @import 'components/breadcrumb';
 @import 'components/button';
 @import 'components/callout-contacts';
