float event button text left to fix #118

--- a/src/templates/t07-events.twig
+++ b/src/templates/t07-events.twig
@@ -26,8 +26,14 @@
   <div class="d-none d-md-block">
     {% include 'partials/sidebar-search.twig' %}
 
-    <a href="#" class="button button--tertiary button--block text-left clearfix mb-1">View Academic Calendar <span class="float-right" aria-hidden="true">&rsaquo;</span></a>
-    <a href="#" class="button button--tertiary button--block text-left clearfix mb-1">Commencement <span class="float-right" aria-hidden="true">&rsaquo;</span></a>
+    <a href="#" class="button button--tertiary button--block text-left clearfix mb-1">
+      <span class="float-left">View Academic Calendar</span>
+      <span class="float-right" aria-hidden="true">&rsaquo;</span>
+    </a>
+    <a href="#" class="button button--tertiary button--block text-left clearfix mb-1">
+      <span class="float-left">Commencement</span>
+      <span class="float-right" aria-hidden="true">&rsaquo;</span>
+    </a>
   </div>
 
 {% endblock %}
