--- a/src/scss/components/_two-col-text.scss
+++ b/src/scss/components/_two-col-text.scss
@@ -13,6 +13,9 @@
   }
 
   @include media(md) {
+    flex: 0 0 50%;
+    max-width: 50%;
+
     &:not(:last-of-type) {
       border-bottom: 0;
       margin-bottom: 0;
