change mission selector to use lighter blue

--- a/src/scss/components/_mission-selector.scss
+++ b/src/scss/components/_mission-selector.scss
@@ -1,5 +1,5 @@
 .mission-selector {
-  background-color: $brand-secondary;
+  background-color: $lighter-blue;
   padding: 2rem;
   margin-bottom: $component-margin-bottom;
 
