--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -71,8 +71,8 @@
 // @import 'components/profile-spotlight-item';
 @import 'components/profile-teaser';
 @import 'components/program-panel';
-// @import 'components/program-spotlight-item';
-// @import 'components/program-spotlight';
+@import 'components/program-spotlight-item';
+@import 'components/program-spotlight';
 @import 'components/projects';
 // @import 'components/publications';
 @import 'components/pullquote';
