--- a/src/templates/t01-home.twig
+++ b/src/templates/t01-home.twig
@@ -67,8 +67,10 @@
       </div>
     </div>
 
-    {% include 'partials/projects.twig' %}
+    {# {% include 'partials/projects.twig' %} #}
 
   </div>
+
+  {% include 'partials/program-spotlight.twig' %}
 
 {% endblock %}
