--- a/src/scss/components/_program-spotlight.scss
+++ b/src/scss/components/_program-spotlight.scss
@@ -1,12 +1,10 @@
 .program-spotlight {
-  @include media(sm) {
-    height: 600px;
-  }
+  margin-bottom: $component-margin-bottom;
 }
 
 .program-spotlight__header {
   height: 100%;
-  padding: 3rem;
+  padding: 8rem 4rem 3rem;
   background-color: $brand-primary;
   display: flex;
   flex-direction: column;
@@ -19,19 +17,17 @@
 
 .program-spotlight__title {
   color: $white;
-  font-size: 30px;
-  margin-bottom: 1rem;
+  font-size: $h1-font-size;
+  line-height: $h1-line-height;
+  margin-bottom: 3rem;
+}
 
-  @include media(md) {
-    font-size: 40px;
-  }
+.program-spotlight__button {
 }
 
 .program-spotlight__controls {
-  display: none;
-
+  margin-top: 1rem;
   @include media(sm) {
-    display: block;
     margin-top: auto;
   }
 }
@@ -40,25 +36,12 @@
 }
 
 .program-spotlight__content {
-  @include media(sm) {
-    display: flex;
-    height: 600px;
-  }
-
-  @include media-breakpoint-only(xs) {
-    display: block;
-  }
+  display: flex;
+  height: 600px;
 }
 
 .program-spotlight__item {
-  // only shows the first 3 items on mobile
-  &:nth-of-type(n + 4) {
-    @include media-breakpoint-down(xs) {
-      display: none;
-    }
-  }
-
-  @include media(sm) {
+  @include media(md) {
     &:not(:last-child) {
       border-right: 1px solid $white;
     }
