--- a/src/scss/components/_program-spotlight-item.scss
+++ b/src/scss/components/_program-spotlight-item.scss
@@ -70,8 +70,8 @@ $spotlight-item-breakpoint: 'xs';
   .program-spotlight-item__side--front & {
     background-image: linear-gradient(
       to bottom,
-      rgba(black, 0.7),
-      rgba(white, 0)
+      rgba($black, 0.55),
+      rgba($white, 0)
     );
   }
 }
