add vertical overflow to spotlight body
This is so narrower displays can still show all content when items are squashed and have less horizontal space

--- a/src/scss/components/_program-spotlight-item.scss
+++ b/src/scss/components/_program-spotlight-item.scss
@@ -79,6 +79,7 @@ $spotlight-item-breakpoint: 'xs';
 .program-spotlight-item__body {
   padding: 1rem;
   flex: 1;
+  overflow-y: auto;
 
   p {
     font-size: 16px;
