--- a/src/scss/components/_program-spotlight-item.scss
+++ b/src/scss/components/_program-spotlight-item.scss
@@ -98,6 +98,24 @@ $spotlight-item-breakpoint: 'xs';
   padding: 1rem;
   padding-bottom: 1.5rem;
   text-align: center;
+  position: relative;
+
+  .program-spotlight-item__side--back & {
+    &:after {
+      content: '';
+      display: block;
+      background-image: linear-gradient(
+        to bottom,
+        rgba($white, 0),
+        $lighter-blue
+      );
+      position: absolute;
+      bottom: 100%;
+      left: 0;
+      width: 100%;
+      height: 2rem;
+    }
+  }
 }
 
 .program-spotlight-item__label {
