add real content example to program spotlight items

--- a/src/templates/partials/program-spotlight-item.twig
+++ b/src/templates/partials/program-spotlight-item.twig
@@ -51,10 +51,11 @@
       </div>
       <div class="program-spotlight-item__body">
         <div class="typography">
-          <h4>Lorem ipsum dolor set?</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-          <h4>Lorem ipsum dolor set?</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <h4>What made the Institute special?</h4>
+          <p>I traveled to Tokyo as part of a seminar on foreign policy, trade, and security. Most of the others were policy and management students, and I was there to provide simultaneous interpretation for the speakers who addressed the class. It was an amazing real-world opportunity to practice my profession.</p>
+
+          <h4>What now?</h4>
+          <p>I’m an interpreter and translator for Faraday Future, an innovative company making high-performance electric vehicles and concept cars.</p>
         </div>
       </div>
       <div class="program-spotlight-item__footer">
