--- a/src/templates/t02-area-of-focus.twig
+++ b/src/templates/t02-area-of-focus.twig
@@ -24,6 +24,7 @@
 
   {% include 'partials/panel.twig' with {
     label: 'Program Spotlight',
+    labelledby: 'midd-panel-label-program-spotlight',
     title: 'International Environmental Policy',
     link_text: 'Explore and Compare Programs',
     link_url: '#',
@@ -48,6 +49,7 @@
 
   {% include 'partials/panel.twig' with {
     label: 'Campus Spotlight',
+    labelledby: 'midd-panel-label-campus-spotlight',
     title: 'The Sustainability Council',
     link_text: 'Learn more',
     link_url: '#',
@@ -67,6 +69,7 @@
 
   {% include 'partials/panel.twig' with {
     label: 'Center Spotlight',
+    labelledby: 'midd-panel-label-center-spotlight',
     title: 'The Sustainability Council',
     link_text: 'Learn more',
     link_url: '#',
